--- a/client/src/app/drafting/opening/pack-opening/pack-opening.component.html
+++ b/client/src/app/drafting/opening/pack-opening/pack-opening.component.html
@@ -1,6 +1,13 @@
-<h2 class="set-name text-center">{{ cardset }}</h2>
+<div class="text-center pt-3 mb-3">
+  <h2>{{ cardset }}</h2>
+  <h4>{{ packsOpened }} / {{ packsToOpen }}</h4>
+</div>
 <div class="wrapping-list">
-  <app-pack-card *ngFor="let card of currentPack" [card]="card"></app-pack-card>
+  <app-pack-card
+    *ngFor="let card of currentPack"
+    [card]="card"
+    (onCardFlipped)="onCardFlipped()"
+  ></app-pack-card>
 </div>
 <div class="d-flex justify-content-center mt-3">
   <button
@@ -10,6 +17,7 @@
     icon="pi pi-refresh"
     iconPos="left"
     class="p-button-secondary mx-1"
+    [disabled]="allFlipped"
     (click)="flipAll()"
   ></button>
   <button
@@ -19,6 +27,7 @@
     icon="pi pi-angle-right"
     iconPos="left"
     class="p-button mx-1"
+    [disabled]="!allFlipped || packsOpened >= packsToOpen"
     (click)="nextPack()"
   ></button>
 </div>
