--- a/client/src/app/drafting/opening/pack-card/pack-card.component.css
+++ b/client/src/app/drafting/opening/pack-card/pack-card.component.css
@@ -63,63 +63,33 @@
 }
 
 .rare-aura-hover:hover {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--rare-color),
-    inset -10px 0 10px var(--rare-color), inset 20px 0 10px var(--rare-color),
-    inset -10px 0 10px var(--rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--rare-color), 10px 0 10px var(--rare-color);
+  box-shadow: var(--rare-color) 0px 0px 15px 7px;
 }
 
 .ultra-rare-aura-hover:hover {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--ultra-rare-color),
-    inset -10px 0 10px var(--ultra-rare-color),
-    inset 20px 0 10px var(--ultra-rare-color),
-    inset -10px 0 10px var(--ultra-rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--ultra-rare-color), 10px 0 10px var(--ultra-rare-color);
+  box-shadow: var(--ultra-rare-color) 0px 0px 15px 7px;
 }
 
 .super-rare-aura-hover:hover {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--uper-rare-color),
-    inset -10px 0 10px var(--uper-rare-color),
-    inset 20px 0 10px var(--uper-rare-color),
-    inset -10px 0 10px var(--uper-rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--uper-rare-color), 10px 0 10px var(--uper-rare-color);
+  box-shadow: var(--super-rare-color) 0px 0px 15px 7px;
 }
 
 .secret-rare-aura-hover:hover {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--secret-rare-color),
-    inset -10px 0 10px var(--secret-rare-color),
-    inset 20px 0 10px var(--secret-rare-color),
-    inset -10px 0 10px var(--secret-rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--secret-rare-color), 10px 0 10px var(--secret-rare-color);
+  box-shadow: var(--secret-rare-color) 0px 0px 15px 7px;
 }
 
 .rare-aura {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--rare-color),
-    inset -10px 0 10px var(--rare-color), inset 20px 0 10px var(--rare-color),
-    inset -10px 0 10px var(--rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--rare-color), 10px 0 10px var(--rare-color);
+  box-shadow: var(--rare-color) 0px 0px 15px 7px;
 }
 
 .ultra-rare-aura {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--ultra-rare-color),
-    inset -10px 0 10px var(--ultra-rare-color),
-    inset 20px 0 10px var(--ultra-rare-color),
-    inset -10px 0 10px var(--ultra-rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--ultra-rare-color), 10px 0 10px var(--ultra-rare-color);
+  box-shadow: var(--ultra-rare-color) 0px 0px 15px 7px;
 }
 
 .super-rare-aura {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--super-rare-color),
-    inset -10px 0 10px var(--super-rare-color),
-    inset 20px 0 10px var(--super-rare-color),
-    inset -10px 0 10px var(--super-rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--super-rare-color), 10px 0 10px var(--super-rare-color);
+  box-shadow: var(--super-rare-color) 0px 0px 15px 7px;
 }
 
 .secret-rare-aura {
-  box-shadow: inset 0 0 10px #fff, inset 20px 0 10px var(--secret-rare-color),
-    inset -10px 0 10px var(--secret-rare-color),
-    inset 20px 0 10px var(--secret-rare-color),
-    inset -10px 0 10px var(--secret-rare-color), 0 0 10px #fff,
-    -10px 0 10px var(--secret-rare-color), 10px 0 10px var(--secret-rare-color);
+  box-shadow: var(--secret-rare-color) 0px 0px 15px 7px;
 }
