--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -11,7 +11,7 @@
 
   <ul class="topbar-menu">
     <li class="topbar-submenu">
-      <a routerLink="/drafting">Drafter</a>
+      <a routerLink="/drafting">Drafting</a>
     </li>
     <li class="topbar-submenu">
       <a routerLink="/collections">Collections</a>
