--- a/client/src/app/collections/collections/collections.component.html
+++ b/client/src/app/collections/collections/collections.component.html
@@ -1,18 +1,3 @@
 <h1>Collections</h1>
 
-<div class="collection d-flex p-2">
-  <div>
-    <div>Collection Name</div>
-    <div class="text-muted"><span>674&nbsp;</span>Cards</div>
-  </div>
-
-  <div class="ms-auto">
-    <button
-      pButton
-      pRipple
-      type="button"
-      icon="pi pi-times"
-      class="p-button-rounded p-button-danger"
-    ></button>
-  </div>
-</div>
+<app-selectable-collection> </app-selectable-collection>
