Added collection CRD

--- a/client/src/app/collections/collection/collection-card/collection-card.component.html
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.html
@@ -1,1 +1,24 @@
-<p>collection-card works!</p>
+<img
+  class="collection-card"
+  (click)="displayModal = true"
+  src="assets/images/cards/{{ card.card_id }}.jpg"
+  [alt]="card.card_name"
+  loading="lazy"
+/>
+
+<p-dialog
+  [(visible)]="displayModal"
+  [modal]="true"
+  [dismissableMask]="true"
+  [showHeader]="false"
+  [draggable]="false"
+  [closable]="true"
+>
+  <img
+    src="assets/images/cards/{{ card.card_id }}.jpg"
+    [alt]="card.card_name"
+    loading="lazy"
+  />
+  <div>Set Name</div>
+  <div class="text-center mt-3">card.set_rarity</div>
+</p-dialog>
