--- a/client/src/app/collections/collection/collection-filters/collection-filters.component.html
+++ b/client/src/app/collections/collection/collection-filters/collection-filters.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-start filter-options">
+<div class="d-flex justify-content-start filter-options box">
   <div>
     <h6>Search</h6>
     <input type="text" pInputText [(ngModel)]="filters.searchText" />
