--- a/client/src/app/collections/collections/collections.component.html
+++ b/client/src/app/collections/collections/collections.component.html
@@ -1,3 +1,19 @@
 <h1>Collections</h1>
 
-<app-selectable-collection> </app-selectable-collection>
+<div *ngIf="loading" class="text-center">
+  <p-progressSpinner></p-progressSpinner>
+</div>
+
+<app-selectable-collection
+  *ngFor="let collection of collections"
+  [collection]="collection"
+  (onDeleted)="onCollectionDeleted(collection)"
+>
+</app-selectable-collection>
+
+<div *ngIf="!loading && collections?.length === 0">
+  You don't have any collections yet! Do a
+  <a routerLink="/drafting">draft</a> and create one.
+</div>
+
+<p-confirmPopup></p-confirmPopup>
