--- a/client/src/app/drafting/opening/bulk-open/bulk-card/bulk-card.component.html
+++ b/client/src/app/drafting/opening/bulk-open/bulk-card/bulk-card.component.html
@@ -17,6 +17,7 @@
   [showHeader]="false"
   [draggable]="false"
   [closable]="true"
+  appendTo="body"
 >
   <img
     [class.rare-aura]="card.set_rarity === 'Rare'"
