--- a/client/src/app/drafting/opening/pack-card/pack-card.component.html
+++ b/client/src/app/drafting/opening/pack-card/pack-card.component.html
@@ -45,6 +45,7 @@
   [showHeader]="false"
   [draggable]="false"
   [closable]="true"
+  appendTo="body"
 >
   <img
     src="assets/images/cards/{{ card.card_id }}.jpg"
