--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="main-container container">
+<div class="main-container container my-md-4">
   <router-outlet></router-outlet>
 </div>
 
