--- a/client/src/app/collections/collection/collection-card/collection-card.component.html
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.html
@@ -13,6 +13,7 @@
   [showHeader]="false"
   [draggable]="false"
   [closable]="true"
+  appendTo="body"
 >
   <img
     src="assets/images/cards/{{ card.card_id }}.jpg"
