--- a/client/src/app/collections/collections/collections.component.html
+++ b/client/src/app/collections/collections/collections.component.html
@@ -8,10 +8,11 @@
   *ngFor="let collection of collections"
   [collection]="collection"
   (onDeleted)="onCollectionDeleted(collection)"
+  class="mx-1"
 >
 </app-selectable-collection>
 
-<div *ngIf="!loading && collections?.length === 0">
+<div *ngIf="!loading && collections?.length === 0" class="text-center">
   You don't have any collections yet! Do a
   <a routerLink="/drafting">draft</a> and create one.
 </div>
