--- a/client/src/app/collections/collection/collection-card/collection-card.component.css
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.css
@@ -1,5 +1,23 @@
-.collection-card {
+.card-container {
+  position: relative;
+  text-align: center;
+  color: white;
+  cursor: pointer;
   width: 105px;
   height: 153px;
-  cursor: pointer;
+}
+
+.centered {
+  position: absolute;
+  top: 66px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 48px;
+  text-shadow: 1px 1px 0 #000, -1px 1px 0 #000, 1px -1px 0 #000,
+    -1px -1px 0 #000, 0px 1px 0 #000, 0px -1px 0 #000, -1px 0px 0 #000,
+    1px 0px 0 #000, 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000,
+    -2px -2px 0 #000, 0px 2px 0 #000, 0px -2px 0 #000, -2px 0px 0 #000,
+    2px 0px 0 #000, 1px 2px 0 #000, -1px 2px 0 #000, 1px -2px 0 #000,
+    -1px -2px 0 #000, 2px 1px 0 #000, -2px 1px 0 #000, 2px -1px 0 #000,
+    -2px -1px 0 #000;
 }
