--- a/client/src/app/collections/collection/collection-card/collection-card.component.html
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.html
@@ -1,10 +1,12 @@
-<img
-  class="collection-card"
-  (click)="displayModal = true"
-  src="assets/images/cards/{{ card.card_id }}.jpg"
-  [alt]="card.card_name"
-  loading="lazy"
-/>
+<div class="card-container" (click)="displayModal = true">
+  <img
+    class="img-fluid"
+    src="assets/images/cards/105_153/{{ card.card_id }}.jpg"
+    [alt]="card.card_name"
+    loading="lazy"
+  />
+  <div class="centered">{{ card.copies }}</div>
+</div>
 
 <p-dialog
   [(visible)]="displayModal"
@@ -20,6 +22,4 @@
     [alt]="card.card_name"
     loading="lazy"
   />
-  <div>Set Name</div>
-  <div class="text-center mt-3">card.set_rarity</div>
 </p-dialog>
