--- a/client/src/app/drafting/setlist/setlist.component.html
+++ b/client/src/app/drafting/setlist/setlist.component.html
@@ -7,7 +7,7 @@
   </app-drafting-options>
 </div>
 <div style="height: 1rem"></div>
-<div class="wrapping-list box">
+<div class="wrapping-list box set-list">
   <app-setlist-pack
     *ngFor="let cardset of cardsets"
     [set]="cardset"
