--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -89,7 +89,8 @@ a {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
+  align-content: flex-start;
 }
 
 .wrapping-list .wrapping-item {
