--- a/client/src/app/drafting/setlist/setlist-pack/setlist-pack.component.html
+++ b/client/src/app/drafting/setlist/setlist-pack/setlist-pack.component.html
@@ -2,7 +2,7 @@
   <img
     (click)="toggleSelected()"
     style="cursor: pointer"
-    src="assets/images/cardsets/{{ set.set_code }}.jpg"
+    src="assets/images/cardsets/small/{{ set.set_code }}.jpg"
     [alt]="set.set_name"
   />
   <div class="set-name">{{ name }}</div>
