--- a/client/src/app/drafting/opening/bulk-open/bulk-open.component.html
+++ b/client/src/app/drafting/opening/bulk-open/bulk-open.component.html
@@ -1,8 +1,11 @@
 <h1>Bulk Open</h1>
 <div class="box py-2">
   <div class="pack-container">
-    <div *ngFor="let pack of packs" class="d-flex flex-row">
-      <div *ngFor="let card of pack" class="card-holder">
+    <div
+      *ngFor="let pack of packs"
+      class="d-flex flex-row justify-content-center"
+    >
+      <div *ngFor="let card of pack" class="card-holder text-center py-2">
         <app-bulk-card [card]="card"></app-bulk-card>
       </div>
     </div>
