added pack card selection

--- a/client/src/app/collections/collections/collections.component.html
+++ b/client/src/app/collections/collections/collections.component.html
@@ -13,7 +13,7 @@
 </app-selectable-collection>
 
 <div *ngIf="!loading && collections?.length === 0" class="text-center">
-  You don't have any collections yet! Do a
+  You don't have any collections yet! Start a
   <a routerLink="/drafting">draft</a> and create one.
 </div>
 
