--- a/client/src/app/drafting/setlist/setlist.component.html
+++ b/client/src/app/drafting/setlist/setlist.component.html
@@ -1,13 +1,14 @@
-<h1>Card Sets</h1>
 <div class="box">
   <app-drafting-options
-    (onOpenPacks)="openPacks($event)"
+    (onOpenPacks)="openPacks()"
+    (onSelectAll)="selectAllSets()"
+    (onDeselectAll)="clearSelectedSets()"
     [canOpen]="selectedSets.length > 0"
+    [(draftOptions)]="draftOptions"
   >
   </app-drafting-options>
 </div>
-<div style="height: 1rem"></div>
-<div class="wrapping-list box set-list">
+<div class="wrapping-list box set-list mt-3">
   <app-setlist-pack
     *ngFor="let cardset of cardsets"
     [set]="cardset"
