--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,10 +7,11 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--text-color);
+  color: var(--primary-color);
 }
 a:focus,
 a:hover {
+  text-decoration: underline;
   color: var(--primary-color);
 }
 
