--- a/client/src/app/drafting/opening/bulk-open/bulk-open.component.html
+++ b/client/src/app/drafting/opening/bulk-open/bulk-open.component.html
@@ -1,4 +1,4 @@
-<h1>Bulk Open</h1>
+<div class="text-center text-danger">{{ errorMessage }}</div>
 <div class="box py-2">
   <div class="pack-container">
     <div
