--- a/client/src/app/collections/collections/selectable-collection/selectable-collection.component.html
+++ b/client/src/app/collections/collections/selectable-collection/selectable-collection.component.html
@@ -1,6 +1,9 @@
 <div class="collection d-flex p-2" (click)="openCollection()">
   <div>
-    <div>Collection Name</div>
+    <div *ngIf="!collection.collection_name">Namless Collection</div>
+    <div *ngIf="collection.collection_name">
+      {{ collection.collection_name }}
+    </div>
     <div class="text-muted">
       <span>{{ collection.num_cards }}&nbsp;</span>Cards
     </div>
