--- a/client/src/app/collections/collections/collections.component.html
+++ b/client/src/app/collections/collections/collections.component.html
@@ -1,4 +1,4 @@
-<h1>Collections</h1>
+<h1>My Collections</h1>
 
 <div *ngIf="loading" class="text-center">
   <p-progressSpinner></p-progressSpinner>
