updated auth redirect

--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -8,7 +8,7 @@
       />
     </a> -->
     <div class="topbar-link">
-      <a routerLink="/">YGO Draft</a>
+      <a routerLink="/"><strong>YGO Draft</strong></a>
     </div>
     <div class="spacer"></div>
 
