--- a/client/src/app/layout/header/header.component.css
+++ b/client/src/app/layout/header/header.component.css
@@ -23,7 +23,7 @@
 .topbar-link > a {
   text-decoration: none;
   color: var(--text-color);
-  min-width: 120px;
+  padding: 0 1rem;
   font-size: 16px;
   display: block;
   text-align: center;
