--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -2,18 +2,26 @@
   <div class="container px-4 py-5 my-5">
     <h1 class="fw-bold">YGO Draft</h1>
 
-    <p class="lead mb-4">Draft Cards. Test Pulls. Build Decks.</p>
+    <p class="lead mb-4">
+      At the moment this site is a work in progress side project that I work on
+      sometimes when I'm bored. If you have an idea for a draft format, and an
+      audience that would be interested in it, reach out, and I'll try to make
+      something happen.
+    </p>
+
+    <p class="lead mb-4">
+      <!-- discord link -->
+      <a href="https://discord.gg/4n5wG8N7" target="_blank"
+        >My personal Discord</a
+      >
+      (I'm VicFrank)
+    </p>
 
     <p class="lead mb-4">
       This Website is still in development. Data will be wiped regularly. There
       will be bugs. Send me a message if you have any feedback.
     </p>
 
-    <button
-      routerLink="/drafting"
-      pButton
-      type="button"
-      label="Get Started"
-    ></button>
+    <button routerLink="/login" pButton type="button" label="Sign In"></button>
   </div>
 </section>
