updated links to use the site

--- a/client/src/app/collections/collection/collection-card/collection-card.component.html
+++ b/client/src/app/collections/collection/collection-card/collection-card.component.html
@@ -1,7 +1,7 @@
 <div class="card-container" (click)="displayModal = true">
   <img
     class="img-fluid"
-    src="assets/images/cards/105_153/{{ card.card_id }}.jpg"
+    src="https://ygodraft.net/images/105_153/{{ card.card_id }}.jpg"
     [alt]="card.card_name"
     loading="lazy"
   />
@@ -18,7 +18,7 @@
   appendTo="body"
 >
   <img
-    src="assets/images/cards/{{ card.card_id }}.webp"
+    src="https://ygodraft.net/images/{{ card.card_id }}.webp"
     [alt]="card.card_name"
     loading="lazy"
   />
