--- a/client/src/app/drafting/opening/pack-card/pack-card.component.html
+++ b/client/src/app/drafting/opening/pack-card/pack-card.component.html
@@ -10,11 +10,14 @@
       (click)="onCardClicked()"
     >
       <div class="flip-card-front">
-        <img src="assets/images/cards/cardback.webp" alt="Yugioh Card" />
+        <img
+          src="https://ygodraft.net/images/cardback.webp"
+          alt="Yugioh Card"
+        />
       </div>
       <div class="flip-card-back">
         <img
-          src="assets/images/cards/{{ card.card_id }}.webp"
+          src="https://ygodraft.net/images/{{ card.card_id }}.webp"
           [class.rare-aura]="card.set_rarity === 'Rare'"
           [class.super-rare-aura]="card.set_rarity === 'Super Rare'"
           [class.ultra-rare-aura]="card.set_rarity === 'Ultra Rare'"
@@ -46,7 +49,7 @@
   appendTo="body"
 >
   <img
-    src="assets/images/cards/{{ card.card_id }}.webp"
+    src="assets/images/{{ card.card_id }}.webp"
     [alt]="card.card_name"
     loading="lazy"
   />
