--- a/client/src/app/master-duel/master-duel-card/master-duel-card.component.html
+++ b/client/src/app/master-duel/master-duel-card/master-duel-card.component.html
@@ -25,7 +25,7 @@
     <img
       class="card-img"
       style="cursor: pointer"
-      src="assets/images/cards/{{ card.card_id }}.webp"
+      src="https://ygodraft.net/images/{{ card.card_id }}.webp"
       [alt]="card.card_name"
     />
   </div>
@@ -50,7 +50,7 @@
   <div class="d-flex justify-content-center">
     <div class="modal-left">
       <img
-        src="assets/images/cards/{{ card.card_id }}.webp"
+        src="https://ygodraft.net/images/{{ card.card_id }}.webp"
         [alt]="card.card_name"
         loading="lazy"
       />
