--- a/client/src/app/drafting/opening/bulk-open/bulk-card/bulk-card.component.html
+++ b/client/src/app/drafting/opening/bulk-open/bulk-card/bulk-card.component.html
@@ -5,7 +5,7 @@
   [class.super-rare-aura-small]="card.set_rarity === 'Super Rare'"
   [class.ultra-rare-aura-small]="card.set_rarity === 'Ultra Rare'"
   [class.secret-rare-aura-small]="card.set_rarity === 'Secret Rare'"
-  src="assets/images/cards/105_153/{{ card.card_id }}.jpg"
+  src="https://ygodraft.net/images/105_153/{{ card.card_id }}.jpg"
   [alt]="card.card_name"
   loading="lazy"
 />
@@ -24,7 +24,7 @@
     [class.super-rare-aura]="card.set_rarity === 'Super Rare'"
     [class.ultra-rare-aura]="card.set_rarity === 'Ultra Rare'"
     [class.secret-rare-aura]="card.set_rarity === 'Secret Rare'"
-    src="assets/images/cards/{{ card.card_id }}.webp"
+    src="https://ygodraft.net/images/{{ card.card_id }}.webp"
     [alt]="card.card_name"
     loading="lazy"
   />
